syntax = "proto3";

package simulator;

option go_package = "./proto;simulator";

service node {
  rpc Send(SendRequest) returns (SendResponse) {}
  rpc SendBroadcast (RecvBroadcastRequest) returns (RecvBroadcastResponse) {}
  rpc Recv (RecvRequest) returns (RecvResponse) {}
  rpc RecvBroadcast (RecvBroadcastRequest) returns (RecvBroadcastResponse) {}
  rpc SetNodeCount(SetNodeCountRequest) returns (SetNodeCountResponse) {}
  rpc SetInterval (SetIntervalRequest) returns (SetIntervalResponse) {}
}

message SetNodeCountRequest {
  uint32 num = 1;
};

message SetNodeCountResponse {};

message SendRequest {
  string receiver_id = 1;
  bytes message = 2;
};

message SendResponse {};

message SetIntervalRequest {
  // 0 时停止自动发送
  uint32 interval_millisecond = 1;
  string sender_id = 2;
}

message SetIntervalResponse {}

message RecvRequest {
  uint32 msg_id = 1;
  bytes message = 2;
  string sender_id = 3;
  string receiver_id = 4;
}

message RecvResponse {};

message RecvBroadcastRequest {
  string sender_id = 1;
  bytes message = 2;
};

message RecvBroadcastResponse {};